# ai-telco-guardian

./: .env.sample  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
api/: llm_provider.py  main.py  rag_qa.py
app/: streamlit_app.py
docs/: TS-Guard_Solution-Architecture_ARC.md
infra/: Dockerfile.api  Dockerfile.app  docker-compose.yml
ml/: features.py  train_tabular.py
rag/: build_index.py
src/ts_guard/api/: llm_provider.py  main.py  rag_qa.py
src/ts_guard/ml/: features.py  train_tabular.py
src/ts_guard/rag/: build_index.py
src/ts_guard/rag/kb/: README.txt
tests/: conftest.py  test_api_smoke.py  test_thresholds.py
