[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ts-guard"
version = "0.1.0"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
rag = [
  "torch>=2.4",
  "sentence-transformers>=3.0",
  "chromadb==0.5.5",
]

