[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ts-guard"
version = "0.1.0"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
rag = [
  "torch>=2.4",
  "sentence-transformers>=3.0",
  "chromadb==0.5.5",
]
dev = ["pytest-cov>=5.0"]

[tool.black]
target-version = ["py311"]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["ts_guard"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
extend-select = ["B950"]
